--- a/src/scss/ui/_header.scss
+++ b/src/scss/ui/_header.scss
@@ -19,13 +19,16 @@
     background-repeat: no-repeat;
     background-size: cover;
 }
+
 .header__banner-content {
     height: 500px;
 }
+
 .header__slider-wrapper {
     display: flex;
     align-items: center;
 }
+
 .header__slider-wrapper,
 .header__services-wrapper,
 .header__banner-wrapper {
@@ -34,12 +37,14 @@
     height: 100%;
     background-color: rgba(0, 0, 0, 0.6);
 }
+
 .header__slider-container,
 .header__services-container,
 .header__banner-container {
     padding-top: 105px;
     padding-bottom: 175px;
 }
+
 .header__slider-title,
 .header__services-title,
 .header__banner-title,
@@ -64,6 +69,7 @@
     line-height: 110%;
     margin-bottom: 10px;
 }
+
 .header__slider-subtitle {
     font-size: var(--text-style-24-font-size);
     font-family: var(--header-font);
@@ -79,6 +85,7 @@
     padding-top: 4px;
     padding-bottom: 4px;
 }
+
 .header__slider-button:hover {
     color: var(--black-color);
     background-color: var(--white-color);
@@ -107,6 +114,7 @@
 .header--service-page .header__container {
     height: 975px;
 }
+
 .header--banner {
     height: 500px;
 }
@@ -130,6 +138,7 @@
     align-items: center;
     color: var(--white-color);
 }
+
 .header__top,
 .header__top a {
     color: var(--white-color);
@@ -142,23 +151,112 @@
     background-repeat: no-repeat;
     background-position: center center;
     background-size: contain;
+
+    @media screen and (max-width: 1110px) {
+        width: 64px;
+        height: 64px;
+    }
+
+    @media screen and (max-width: 1110px) {
+        width: 50px;
+        height: 50px;
+    }
+}
+
+.nav__list {
+    display: flex !important;
+
+    @media screen and (max-width: 1110px) {
+        display: none !important;
+    }
+}
+
+.nav__list-mob {
+    display: none !important;
+
+    @media screen and (max-width: 1110px) {
+        display: flex !important;
+        align-items: center;
+
+    }
 }
 
 .header__top .nav__item {
+
+    &:first-child {
+        @media screen and (max-width: 1110px) {
+            padding: 0;
+            margin-left: 50px;
+        }
+
+        @media screen and (max-width: 768px) {
+            margin-left: 49px;
+        }
+    }
+
     padding: 0 20px;
+
+    @media screen and (max-width: 1110px) {
+        padding: 0;
+
+        &:not(:last-child) {
+            margin-right: 30px;
+        }
+    }
+
+    @media screen and (max-width: 1110px) {
+        &:not(:last-child) {
+            margin-right: 20px;
+        }
+    }
 }
 
 .header__info {
     text-align: right;
+    grid-template-columns: 188px 333px;
+
+    @media screen and (max-width: 1430px) {
+        grid-template-columns: 1fr;
+        row-gap: 5px;
+    }
+
+    @media screen and (max-width: 1110px) {
+        display: none !important;
+    }
+
+    .header__info-number {
+        grid-area: 1/1/2/2;
+
+
+
+    }
+
+    .header__info-email {
+        grid-area: 2/1/3/2;
+
+        @media screen and (max-width: 1430px) {
+            grid-area: 3/1/4/2;
+        }
+    }
+
+    .header__search_account {
+        grid-area: 1/2/3/3;
+
+        @media screen and (max-width: 1430px) {
+            grid-area: 2/1/3/2;
+        }
+    }
 }
 
 .nav__link {
     font-family: var(--header-font);
+
 }
 
 .header__search_account {
     margin-left: 15px;
     border: 1px solid var(--grey-color);
+    justify-content: flex-end;
 }
 
 .header__search_form,
@@ -176,10 +274,12 @@
 .header__search_form {
     display: flex;
 }
+
 .header__search_form-input {
     color: #fff;
     padding: 0;
 }
+
 .header__search_form-button,
 .header__account_link {
     display: grid;
@@ -199,6 +299,7 @@
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
 }
+
 .header__categories-link {
     border: 1px var(--grey-color) solid;
     color: var(--white-color);
@@ -212,6 +313,7 @@
     background-size: cover;
     transition: 0.3s;
     position: relative;
+
     span {
         position: relative;
         z-index: 1;
@@ -228,36 +330,42 @@
     width: 100%;
     height: 100%;
 }
+
 .header__categories-link-1 {
     &::after {
         background: url("../images/home__top_service/bg-item.png") center center no-repeat;
         background-size: 100% 100%;
     }
 }
+
 .header__categories-link-2 {
     &::after {
         background: url("../images/home__top_service/bg-item.png") center center no-repeat;
         background-size: 100% 100%;
     }
 }
+
 .header__categories-link-3 {
     &::after {
         background: url("../images/home__top_service/bg-item.png") center center no-repeat;
         background-size: 100% 100%;
     }
 }
+
 .header__categories-link-4 {
     &::after {
         background: url("../images/home__top_service/bg-item.png") center center no-repeat;
         background-size: 100% 100%;
     }
 }
+
 .header__categories-link-5 {
     &::after {
         background: url("../images/home__top_service/bg-item.png") center center no-repeat;
         background-size: 100% 100%;
     }
 }
+
 .header__categories-link-6 {
     &::after {
         background: url("../images/home__top_service/bg-item.png") center center no-repeat;
@@ -267,6 +375,7 @@
 
 .header__categories-link:hover {
     border-color: var(--black-color);
+
     &::after {
         opacity: 1;
     }
@@ -286,6 +395,7 @@
 }
 
 .header__top-wrap {
+    position: relative;
     transition: all 0.3s ease;
     z-index: 10;
     top: 0;
@@ -294,6 +404,16 @@
     position: absolute;
     padding-top: 10px;
     padding-bottom: 10px;
+
+    @media screen and (max-width: 1430px) {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
+    @media screen and (max-width: 768px) {
+        padding-left: 10px;
+        padding-right: 10px;
+    }
 }
 
 /* ----------------------------------------------
@@ -314,18 +434,21 @@
         transform: translateY(-1000px);
         opacity: 0;
     }
+
     100% {
         -webkit-transform: translateY(0);
         transform: translateY(0);
         opacity: 1;
     }
 }
+
 @keyframes slide-in-top {
     0% {
         -webkit-transform: translateY(-1000px);
         transform: translateY(-1000px);
         opacity: 0;
     }
+
     100% {
         -webkit-transform: translateY(0);
         transform: translateY(0);
@@ -339,11 +462,13 @@
         background-color: var(--black-color);
         -webkit-animation: slide-in-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
         animation: slide-in-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+
         .header__top {
             max-width: 1400px;
             margin: auto;
         }
     }
+
     &_bg-black {
         background-color: var(--black-color);
     }
@@ -354,16 +479,19 @@
 }
 
 .page-header-wrapper {
+
     .header__slider-container,
     .header__services-container,
     .header__banner-container {
         padding-top: 175px;
         padding-bottom: 175px;
     }
+
     .header__banner {
         max-height: 500px;
         min-height: 400px;
     }
+
     .header__banner-content {
         max-height: 500px;
         height: 100vh;
@@ -371,6 +499,7 @@
         background-size: cover;
         background-position: center;
     }
+
     .header__banner-wrapper {
         max-height: 500px;
         min-height: 400px;
@@ -383,3 +512,69 @@
 
 
 
+.burger-menu {
+    transform: translateX(-100%);
+    transition: all .5s ease;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background: #4A586E;
+    padding-top: 15px;
+    padding-bottom: 20px;
+
+    .container{
+        padding-left: 20px;
+    }
+    &__btn-close{
+        position: absolute;
+        right: 20px;
+        width: 16px;
+        height: 16px;
+        background-image: url(../images/header/close__icon.svg);
+    }
+
+    &__logo{
+        width: 64px;
+        height: 64px;
+        margin-bottom: 28px;
+    }
+    &__nav{
+        margin-bottom: 41px;
+    }
+    &__list{
+        display: flex;
+        flex-direction: column;
+    }
+    &__item{
+        &:not(:last-child){
+            margin-bottom: 15px;
+        }
+    }
+    &__link{
+        font-size: 26px;
+        line-height: 31.69px;
+    }
+
+
+
+    &__contacts-box{
+        display: flex;
+        flex-direction: column;
+    }
+    &__link-contact{
+        font-size: 16px;
+        line-height: 19.5px;
+        &:first-child{
+            margin-bottom: 5px;
+        }
+    }
+}
+.burger-menu.active{
+    transform: translateX(0);
+    transition: all .5s ease;
+}
+body.active{
+    overflow: hidden;
+}
